--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,4 +1,4 @@
-li {
+nav > ul > li {
   list-style-type: none;
   padding: 8px;
   border: 3px solid black;
@@ -14,9 +14,16 @@ ul {
 nav {
   display: flex;
   width: 100%;
+  background-color: #848482;
 }
 
 h4 {
   display: flex;
   align-items: center;
+}
+
+.resource-container {
+  position: absolute;
+  top: 14%;
+  background-color: #848482;
 }
