--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
+.lexend {
+  font-family: "Lexend", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 350;
+  font-style: normal;
+}
+
 * {
   margin: 0;
   padding: 0;
   background-color: whitesmoke;
+  font-family: "Lexend", sans-serif;
 }
+
+
