--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,20 +1,22 @@
 nav > ul > li {
   list-style-type: none;
   padding: 8px;
-  border: 3px solid black;
-  color: white;
+  border: 3px solid #000000;
   border-radius: 10px;
   margin: 10px;
 }
 
 ul {
   display: flex;
+  color: #000;
 }
 
 nav {
   display: flex;
   width: 100%;
-  background-color: #848482;
+  background-color: #80727b;
+  align-content: space-around;
+  justify-content: flex-end;
 }
 
 h4 {
@@ -25,5 +27,20 @@ h4 {
 .resource-container {
   position: absolute;
   top: 14%;
-  background-color: #848482;
+  background-color: #80727b;
+}
+li {
+  color: #f1dede;
+}
+
+a {
+  background: fixed;
+  color: #f1dede;
+}
+
+.auth-btn {
+  background-color: #f1dede;
+  color: #333333;
+  padding: 10px 15px;
+  border-radius: 5px;
 }
