--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .lexend {
   font-family: "Lexend", sans-serif;
   font-optical-sizing: auto;
@@ -10,5 +9,6 @@
   margin: 0;
   padding: 0;
   background-color: whitesmoke;
+  color: black;
   font-family: "Lexend", sans-serif;
 }
