--- a/src/components/MoodDetail/MoodDetail.css
+++ b/src/components/MoodDetail/MoodDetail.css
@@ -22,12 +22,30 @@
   padding: 30px;
 }
 
-
 /* edit mood styling */
+
+.update-moodform {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .form-element {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
 }
-                      
+
+
+label {
+  padding-right: 15px;
+}
+
+select {
+  padding: 3px;
+}
+
+textarea {
+  width: 264px;
+  height: 47px;
+}
