--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 * {
   margin: 0;
   padding: 0;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
   color: black;
   font-family: "Lexend", sans-serif;
 }
