--- a/src/components/MoodList/MoodList.css
+++ b/src/components/MoodList/MoodList.css
@@ -21,7 +21,6 @@ ul {
 .add-button {
   display: flex;
   justify-content: center;
-  margin-top: 50px;
 }
 
 button {
@@ -52,5 +51,13 @@ li strong {
 }
 
 li p {
-   margin-top: 10px;
+  margin-top: 10px;
+}
+
+.moodlist-buttons {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 30px;
 }
