--- a/src/components/MoodSocial/MoodSocial.css
+++ b/src/components/MoodSocial/MoodSocial.css
@@ -1,29 +1,36 @@
-.mood-list {
-  display: block; /* reset any flex/inline styles */
-  padding: 0;
-  margin: 0;
-  list-style: none;
+.mood-social-title {
+  display: flex;
+  justify-content: center;
+  padding: 25px;
+  margin-bottom: 45px;
+  margin-top: 50px;
+  font-size: 6vh;
+}
+
+.sort-controls {
+  margin-left: 10vh;
 }
 
 .mood-item {
-  display: flex; /* items inside each mood */
-  justify-content: flex-start;
-  gap: 1rem;
-  margin-bottom: 0.75rem;
-  border-bottom: 1px solid #ddd;
-  padding-bottom: 0.5rem;
+  border: black solid 2px;
+  padding: 30px;
+  border-radius: 10px;
+  background-color: #f1dede;
+  display: flex;
+  flex-direction: column;
 }
 
-.mood-emotion {
-  flex: 1; /* first column */
-  font-weight: bold;
+.mood-list {
+  display: flex;
+  justify-content: space-evenly;
+  list-style: none;
+  text-align: center;
+  margin-top: 35px;
+    margin-bottom: 55px;
 }
 
-.mood-date {
-  flex: 1; /* second column */
-  font-style: italic;
-}
-
-.mood-intensity {
-  flex: 1; /* third column */
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
