--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -8,3 +8,12 @@
     font-size: 15px;
 
 }
+
+/* for cell phones */
+@media (max-width: 430px) {
+   .in-case-of-emergency {
+      width: 90%;
+      margin: 2vh;
+      position: fixed;
+   }
+} 
