--- a/src/components/MoodForm/MoodForm.css
+++ b/src/components/MoodForm/MoodForm.css
@@ -41,3 +41,21 @@ textarea {
 .time-input {
   background-color: white;;
 }
+
+
+/* for cell phones */
+@media (max-width: 430px) {
+
+  .note-textarea {
+    width: 294px;
+  }
+
+  .physical-label, .intensity-label {
+    text-align: center;
+  }
+
+  .form-element {
+    width: 80%;
+    justify-content: center;
+  }
+}
