--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,19 +1,24 @@
 .in-case-of-emergency {
-   text-align: center;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 10px;
-    font-size: 15px;
-
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 10px;
+  font-size: 15px;
+  z-index: 1000;
+  background-color: whitesmoke;
 }
 
 /* for cell phones */
 @media (max-width: 430px) {
-   .in-case-of-emergency {
-      width: 90%;
-      margin: 2vh;
-      position: fixed;
-   }
-} 
+  .in-case-of-emergency {
+    font-size: 13px;
+    padding: 8px;
+    width: 100%;
+    margin: 0;
+    bottom: 0;
+    left: 0;
+    background-color: whitesmoke;
+  }
+}
