--- a/src/components/MoodSocial/MoodSocial.css
+++ b/src/components/MoodSocial/MoodSocial.css
@@ -26,11 +26,34 @@
   list-style: none;
   text-align: center;
   margin-top: 35px;
-    margin-bottom: 55px;
+  margin-bottom: 55px;
 }
 
 .pagination {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.mood-social-container {
+  padding-bottom: 70px;
+}
+
+/* for cell phones */
+
+@media (max-width: 430px) {
+  .mood-list {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    justify-items: center;
+    padding: 0;
+    margin: 0 0 30px 0;
+  }
+
+  .mood-social-title {
+    text-align: center;
+    margin-bottom: 25px;
+  }
+
 }
