--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,11 @@
   color: black;
   font-family: "Lexend", sans-serif;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+}
