styling for guest landing page, sign in, sign up pages

--- a/src/components/GuestLanding/GuestLanding.css
+++ b/src/components/GuestLanding/GuestLanding.css
@@ -59,7 +59,7 @@ main {
   background-color: whitesmoke;
 }
 
-h1 {
+.landing-page-title {
   font-size: 5rem;
   font-weight: 700;
   animation: textColorShift 6s ease-in-out infinite;
