--- a/src/components/SignInForm/SignInForm.css
+++ b/src/components/SignInForm/SignInForm.css
@@ -1,4 +1,11 @@
-button {
-  background-color: #f1dede;
-  margin: 10;
+.sign-in-title {
+  padding: 25px;
+  margin-bottom: 20px;
 }
+
+.sign-in-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
