--- a/src/components/SignUpForm/SignUpForm.css
+++ b/src/components/SignUpForm/SignUpForm.css
@@ -1,8 +1,26 @@
+.sign-up-title {
+  padding: 25px;
+  margin-bottom: 20px;
+}
+
 input {
   margin: 10px;
 }
 
-button {
-  margin: 10px;
-  color: #000000;
+.sign-up-buttons {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.password-input {
+  width: 250px;
+}
+
+.username-input {
+  width: 250px;
+}
+
+.confirm-input {
+  width: 190px;
 }
