--- a/src/components/GuestLanding/GuestLanding.css
+++ b/src/components/GuestLanding/GuestLanding.css
@@ -15,7 +15,7 @@
   font-weight: 700;
   margin-bottom: 1.25rem;
   text-align: center;
-  color: #545643; 
+  color: #545643;
   border-bottom: 2px solid #000000;
   padding-bottom: 0.5rem;
   background-color: rgb(5, 5, 5);
@@ -33,27 +33,26 @@
   display: block;
   margin-bottom: 0.75rem;
   line-height: 1.5;
-  color: #80727b; 
+  color: #80727b;
 }
 
 @keyframes textColorShift {
   0% {
-    color: #7b2ff7; 
+    color: #6e4aa9;
   }
   25% {
-    color: #9c4dff; 
+    color: #80727b;
   }
   50% {
-    color: #4b6cb7; 
+    color: #4b6cb7;
   }
   75% {
-    color: #2d94a9; 
+    color: #2d94a9;
   }
   100% {
-    color: #7b2ff7;
+    color: #6e4aa9;
   }
 }
-
 
 main {
   background-color: whitesmoke;
