--- a/src/components/Resources/Resources.css
+++ b/src/components/Resources/Resources.css
@@ -30,7 +30,7 @@
 }
 
 .resources a {
-  color: #f1dede; /* your theme color */
+  /* color: #f1dede; your theme color */
   text-decoration: underline;
 }
 
